code comments added and conten type response setted

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-# pytest
-asyncio
-aiohttp
-async-lru
-python-dotenv
+aiohttp == 3.8.4
+async-lru == 2.0.2
+python-dotenv == 1.0.0
 fastapi
 uvicorn[standard]
+# pytest
 
 
 
@@ -13,6 +12,4 @@ uvicorn[standard]
 #manejo de errores
 
 # -------------- domingo
-#comentarios del codigo
 #organizar docker
-#responder header json content type
