--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+python-dotenv == 1.0.0
+uvicorn[standard]
+fastapi
 aiohttp == 3.8.4
 async-lru == 2.0.2
-python-dotenv == 1.0.0
-fastapi
-uvicorn[standard]
-# pytest
+httpx
+pytest==7.3.2
+pytest-aiohttp
+jsonschema==4.17.3
 
 
 
